--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,19 +16,17 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:titleTextColor="#958484"
-        >
+        app:titleTextColor="#958484">
 
         <ImageButton
             android:id="@+id/Chat"
             android:layout_width="30dp"
-            android:layout_weight = "1"
             android:layout_height="40dp"
-            android:src="@android:drawable/sym_action_chat"
-            />
+            android:layout_weight="1"
+            android:src="@android:drawable/sym_action_chat" />
 
         <TextView
             android:id="@+id/Title"
@@ -37,15 +35,13 @@
             android:gravity="center_horizontal"
             android:text="Social.ly"
             android:textColor="#0B0B0B"
-            android:textSize="30sp"
-            />
+            android:textSize="30sp" />
 
         <ImageButton
             android:id="@+id/Menu"
             android:layout_width="30dp"
             android:layout_height="40dp"
-            android:src="@android:drawable/sym_action_chat"
-            />
+            android:src="@android:drawable/sym_action_chat" />
 
     </androidx.appcompat.widget.Toolbar>
 
