--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -5,19 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorBackgroundColor"
     android:paddingLeft="20dp"
     android:paddingRight="20dp"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="322dp"
-        android:layout_height="250dp"
-        android:layout_marginTop="32dp"
+        android:layout_width="242dp"
+        android:layout_height="179dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.514"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         app:srcCompat="@drawable/welcome" />
 
@@ -29,6 +30,8 @@
         android:fontFamily="@font/amaranth"
         android:gravity="center_horizontal"
         android:text="Welcome to Social.ly"
+        android:textColor="#222222"
+        android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
         app:layout_constraintHorizontal_bias="0.5"
@@ -39,21 +42,35 @@
         android:id="@+id/textView2"
         android:layout_width="367dp"
         android:layout_height="20dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:gravity="center_horizontal"
         android:text="Your new best friends are  just a few taps away"
+        android:textColor="#222222"
+
         app:layout_constraintBottom_toTopOf="@+id/Register_Start"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+
+
+        />
 
     <Button
         android:id="@+id/Register_Start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:background="@color/colorAccent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/primary_button"
+        android:shadowColor="#31FFFFFF"
+        android:shadowRadius="0"
         android:text="Register"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        style="?android:attr/borderlessButtonStyle"
+
         app:layout_constraintBottom_toTopOf="@+id/Login_Start"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintHorizontal_bias="0.5"
@@ -64,9 +81,16 @@
         android:id="@+id/Login_Start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:background="#FFFFFF"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/secondary_button"
         android:text="Login"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        style="?android:attr/borderlessButtonStyle"
+
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="@+id/Register_Start"
         app:layout_constraintHorizontal_bias="0.5"
@@ -77,9 +101,12 @@
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="64dp"
         android:gravity="center_horizontal"
         android:text="Forgot your password?"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/Login_Start"
         app:layout_constraintHorizontal_bias="0.5"
@@ -88,9 +115,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="277dp"
-        android:layout_height="69dp"
-        android:layout_marginTop="16dp"
+        android:layout_width="205dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="64dp"
         app:layout_constraintBottom_toTopOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
