--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,43 +7,10 @@
     android:layout_height="match_parent"
     android:background="#F2F2F2">
 
-
-    <androidx.appcompat.widget.Toolbar
+    <include
         android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#F2F2F2"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:titleTextColor="#958484">
-
-        <ImageButton
-            android:id="@+id/Chat"
-            android:layout_width="30dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:src="@android:drawable/sym_action_chat" />
-
-        <TextView
-            android:id="@+id/Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="Social.ly"
-            android:textColor="#0B0B0B"
-            android:textSize="30sp" />
-
-        <ImageButton
-            android:id="@+id/Menu"
-            android:layout_width="30dp"
-            android:layout_height="40dp"
-            android:src="@android:drawable/sym_action_chat" />
-
-    </androidx.appcompat.widget.Toolbar>
+        layout="@layout/toolbar"
+        ></include>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
@@ -71,7 +38,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintVertical_bias="0.0"
         app:navGraph="@navigation/mobile_navigation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
