--- a/app/src/main/res/layout/fragment_home_addfriend.xml
+++ b/app/src/main/res/layout/fragment_home_addfriend.xml
@@ -80,7 +80,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
                 android:fontFamily="sans-serif-smallcaps"
-                android:text="Short Description"
+                android:text="ABOUT"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/addfriend_shortdesc"
