--- a/app/src/main/res/layout/gridfrienditem.xml
+++ b/app/src/main/res/layout/gridfrienditem.xml
@@ -7,7 +7,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardBackgroundColor="@color/colorBackgroundColor">
+        app:cardBackgroundColor="#FFFFFF">
 
         <LinearLayout
             android:layout_width="match_parent"
