--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".ui.Friends.FriendsFragment">
 
+     <TextView
+         android:id="@+id/addfriends_nousers"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         app:layout_constraintBottom_toBottomOf="parent"
+         app:layout_constraintEnd_toEndOf="@+id/frame"
+         app:layout_constraintStart_toStartOf="@+id/frame"
+         app:layout_constraintTop_toTopOf="@+id/frame" />
+
      <com.lorentzos.flingswipe.SwipeFlingAdapterView
          android:id="@+id/frame"
          android:layout_width="0dp"
