--- a/app/src/main/res/layout/fragment_home_addfriend.xml
+++ b/app/src/main/res/layout/fragment_home_addfriend.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:background="@color/colorAccent">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -78,7 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="32dp"
                 android:fontFamily="sans-serif-medium"
                 android:text="ABOUT"
                 android:textSize="16sp"
@@ -192,6 +193,17 @@
                 app:layout_constraintEnd_toEndOf="@+id/addfriend_yes"
                 app:layout_constraintHorizontal_bias="0.63"
                 app:layout_constraintStart_toStartOf="@+id/addfriend_yes" />
+
+            <View
+                android:id="@+id/divider3"
+                android:layout_width="391dp"
+                android:layout_height="3dp"
+                android:layout_marginBottom="16dp"
+                android:background="@color/colorAccent"
+                app:layout_constraintBottom_toTopOf="@+id/textView11"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.727"
+                app:layout_constraintStart_toStartOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
